cabal-version: 2.4

name:                   hw-tar
version:                0.0.0.1
synopsis:               Library for creating and extracting tar archives
description:            Library for creating and extracting tar archives.
homepage:               https://github.com/haskell-works/hw-tar
license:                BSD-3-Clause
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 - 2019 John Ky
category:               Codec
tested-with:            GHC == 8.10.2, GHC == 8.8.3, GHC == 8.6.5, GHC == 8.4.4
extra-source-files:     CHANGELOG.md

common base                 { build-depends: base                 >= 4.7        && < 5      }

common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
common hspec                { build-depends: hspec                >= 2.4        && < 3      }
common hw-hedgehog          { build-depends: hw-hedgehog          >= 0.1.0.3    && < 0.2    }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
common process              { build-depends: process              >= 1.6.5.0    && < 1.7    }

common config
  default-language:       Haskell2010

library
  import:   base, config
  exposed-modules:        HaskellWorks.Tar
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:       src
  default-language:       Haskell2010

executable hw-tar
  import:   base, config
  main-is:                Main.hs
  build-depends:          hw-tar
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:         app
  default-language:       Haskell2010

test-suite hw-tar-test
  import:   base, config
          , hedgehog
          , hspec
          , hw-hedgehog
          , hw-hspec-hedgehog
          , process
  type:                   exitcode-stdio-1.0
  ghc-options:            -threaded -rtsopts -with-rtsopts=-N
  main-is:                Spec.hs
  build-depends:          hw-tar
  hs-source-dirs:         test
  build-tools:            hspec-discover
